# hackathon-integration-platform

./: .gitignore  README.md
.github/workflows/: ci-cd.yaml
backend/: .dockerignore  Dockerfile  README.md  back-reload.sh  docker-compose.yaml  pyproject.toml  settings.example.yaml  settings.schema.yaml
backend/alembic/versions/: _2025_04_18_17_45_init_alembic.py  _2025_04_19_01_53_add_reference_between_request_and_answer.py  _2025_04_19_03_50_make_responses_unique.py  _2025_04_19_09_22_set_ondelete_for_reply_to_field.py  _2025_04_19_15_49_add_model_field.py  _2025_04_19_16_06_make_model_nullable.py  _2025_04_19_18_33_add_dialog_model.py  _2025_04_19_18_54_fix_relations_between_massage_and_dialog.py  _2025_04_20_14_22_renamed_content_to_message.py
backend/data/: documentation.docx  documentation.md
backend/data/vector.index/: index.faiss  index.pkl
backend/src/: app.py  config_schema.py  models.py  prepare.py
backend/src/api/: __main__.py  app.py  lifespan.py
backend/src/api/chat/: ai_service.py  constants.py  routes.py
backend/src/api/dialog/: routes.py
backend/src/api/message/: routes.py
backend/src/api/messages/: routes.py
backend/src/db/models/: __init__.py  dialog.py  message.py
backend/src/db/repositories/: __init__.py  dialog_repository.py  messages_repository.py
backend/src/rag/: __init__.py  indexer.py  loader.py  retriever.py
backend/src/schemas/: __init__.py  chat.py  dialog.py  message.py
frontend/: .lintstagedrc.js  .pre-commit-config.yaml  README.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/app/: Providers.tsx  globals.css  layout.tsx  page.tsx
frontend/src/components/: CodeBlock.tsx  MarkDown.tsx  chatInterface.tsx
frontend/src/components/ui/: button.tsx  renderMessage.tsx  textarea.tsx  wavy-background.tsx
frontend/src/lib/: api.ts  constants.ts  interfaces.ts  interfaces.tsx
frontend/src/lib/hooks/: useChatActions.ts  useChatHistory.ts  useChatHook.ts  useChatSubmit.ts  useCreateChat.ts  useDeleteMessage.ts  (+4 more)
frontend/src/types/: hljs.d.ts
