[project]
name = "integration-platform"
version = "0.1.0"
description = ""
authors = ["one-zero-eight <https://t.me/one_zero_eight>"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "pyyaml>=6.0.2",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 120
lint.ignore = ["PLR"]
lint.extend-select = ["I", "UP", "PL"]
target-version = "py312"
