[project]
name = "integration-platform"
version = "0.1.0"
description = ""
authors = ["one-zero-eight <https://t.me/one_zero_eight>"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "colorlog>=6.9.0",
    "faiss-cpu>=1.10.0",
    "fastapi>=0.115.12",
    "fastapi-derive-responses>=0.1.4",
    "fastapi-swagger>=0.2.16",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "pypdf>=5.4.0",
    "python-docx>=1.1.2",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "sqlalchemy>=2.0.40",
    "unstructured>=0.17.2",
    "uvicorn>=0.34.2",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 120
lint.ignore = ["PLR"]
lint.extend-select = ["I", "UP", "PL"]
target-version = "py312"
